; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_xdp.c___xdp_release_frame.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_xdp.c___xdp_release_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdp_mem_info = type { i32 }
%struct.xdp_mem_allocator = type { i32 }
%struct.page = type { i32 }

@mem_id_ht = common dso_local global i32 0, align 4
@mem_id_rht_params = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__xdp_release_frame(i8* %0, %struct.xdp_mem_info* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.xdp_mem_info*, align 8
  %5 = alloca %struct.xdp_mem_allocator*, align 8
  %6 = alloca %struct.page*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.xdp_mem_info* %1, %struct.xdp_mem_info** %4, align 8
  %7 = call i32 (...) @rcu_read_lock()
  %8 = load i32, i32* @mem_id_ht, align 4
  %9 = load %struct.xdp_mem_info*, %struct.xdp_mem_info** %4, align 8
  %10 = getelementptr inbounds %struct.xdp_mem_info, %struct.xdp_mem_info* %9, i32 0, i32 0
  %11 = load i32, i32* @mem_id_rht_params, align 4
  %12 = call %struct.xdp_mem_allocator* @rhashtable_lookup(i32 %8, i32* %10, i32 %11)
  store %struct.xdp_mem_allocator* %12, %struct.xdp_mem_allocator** %5, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call %struct.page* @virt_to_head_page(i8* %13)
  store %struct.page* %14, %struct.page** %6, align 8
  %15 = load %struct.xdp_mem_allocator*, %struct.xdp_mem_allocator** %5, align 8
  %16 = icmp ne %struct.xdp_mem_allocator* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %2
  %18 = load %struct.xdp_mem_allocator*, %struct.xdp_mem_allocator** %5, align 8
  %19 = getelementptr inbounds %struct.xdp_mem_allocator, %struct.xdp_mem_allocator* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.page*, %struct.page** %6, align 8
  %22 = call i32 @page_pool_release_page(i32 %20, %struct.page* %21)
  br label %23

23:                                               ; preds = %17, %2
  %24 = call i32 (...) @rcu_read_unlock()
  ret void
}

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local %struct.xdp_mem_allocator* @rhashtable_lookup(i32, i32*, i32) #1

declare dso_local %struct.page* @virt_to_head_page(i8*) #1

declare dso_local i32 @page_pool_release_page(i32, %struct.page*) #1

declare dso_local i32 @rcu_read_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
